--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,6 @@
 
     <section class="books-section">
         <div class="content-wrapper">
-
             <article class="book-showcase">
                 <div class="book-cover">
                     <img src="book1.jpg" alt="To Be in History, Dark Days of Authoritarianism">
@@ -80,22 +79,24 @@
 
      <section class="rappler-section">
         <div class="content-wrapper">
-            <h2>Articles on Rappler</h2>
-            <p style="text-align:center; max-width: 700px; margin: -20px auto 40px auto;">Applying a biblical lens to the pressing issues of the day. Explore our contributions to the national conversation.</p>
+            <div class="rappler-header">
+                <img src="https://placehold.co/150x50/ffffff/1a1a1a?text=Rappler+Logo" alt="Rappler Logo">
+                <p>Rappler is a leading social news network in the Philippines that combines journalism with civic engagement. Explore our contributions to the national conversation below.</p>
+            </div>
             <div class="rappler-grid">
                 <a href="https://www.rappler.com/voices/thought-leaders/reflection-idols-of-our-time/" target="_blank" class="rappler-card">
+                    <img src="https://placehold.co/600x400/cccccc/333?text=Article+Image" alt="">
                     <h3>[Reflection] The idols of our time</h3>
-                    <p>A look at the modern-day idols that captivate hearts and shape our society's values.</p>
                     <span>Read on Rappler →</span>
                 </a>
                 <a href="https://www.rappler.com/voices/thought-leaders/opinion-on-duterte-arrest-and-sovereignty/" target="_blank" class="rappler-card">
+                    <img src="https://placehold.co/600x400/cccccc/333?text=Article+Image" alt="">
                     <h3>[OPINION] On Duterte, arrest, and sovereignty</h3>
-                    <p>Analyzing the complex interplay between national sovereignty and international justice.</p>
                     <span>Read on Rappler →</span>
                 </a>
                 <a href="https://www.rappler.com/voices/thought-leaders/opinion-profaning-appropriations-nothing-left-sacred/" target="_blank" class="rappler-card">
+                    <img src="https://placehold.co/600x400/cccccc/333?text=Article+Image" alt="">
                     <h3>[OPINION] On profaning appropriations</h3>
-                    <p>A discussion on the sacredness of public funds and the moral implications of corruption.</p>
                     <span>Read on Rappler →</span>
                 </a>
             </div>
@@ -103,10 +104,46 @@
     </section>
 
     <footer>
-        </footer>
+        <div class="footer-content">
+            <div class="footer-col">
+                <h4>ISACC</h4>
+                <p>Institute for Studies in Asian Church and Culture</p>
+            </div>
+            <div class="footer-col">
+                <h4>Contact Us</h4>
+                <p>
+                    Landline:<br>
+                    +63 (02) 8255-7614<br>
+                    +63 (02) 8470-1044
+                </p>
+                <p>
+                    Email: <a href="mailto:isaccglobal@gmail.com">isaccglobal@gmail.com</a>
+                </p>
+            </div>
+            <div class="footer-col">
+                <h4>Our Location</h4>
+                <p>
+                    4 Malinis, Diliman<br>
+                    Quezon City, Metro Manila<br>
+                    Philippines
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <div id="fullscreen-menu">
-        </div>
+        <nav class="menu-nav">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/trainings.html">Trainings</a></li>
+                <li><a href="/research.html">Research</a></li>
+                <li><a href="/podcast.html">Podcast</a></li>
+                <li><a href="/publications.html">Publications</a></li>
+                <li><a href="/advocacy.html">Advocacy</a></li>
+                <li><a href="/about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <script src="script.js"></script>
 </body>
