--- a/advocacy.html
+++ b/advocacy.html
@@ -29,8 +29,9 @@
              <p>Explore our contributions to national conversations on these platforms.</p>
              <div class="social-links">
                 <a href="http://opinion.inquirer.net/byline/melba-padilla-maggay" target="_blank" class="social-button-dark">Philippine Daily Inquirer</a>
-                <a href="https://www.rappler.com/author/melba-padilla-maggay/" target="_blank" class="social-button-dark">Rappler</a>
-                <a href="#" class="social-button-dark"><i class="fa-solid fa-microphone"></i> 98.7 DZFE & 702 DZAS</a>
+                <a href="https://www.rappler.com/author/melba-padilla-maggay/" target="_blank" class="social-button-dark">Rappler Author Page</a>
+                <a href="https://febc.ph/dzfe/" target="_blank" class="social-button-dark"><i class="fa-solid fa-microphone"></i> 98.7 DZFE</a>
+                <a href="https://www.febc.ph/dwas-program-grid/" target="_blank" class="social-button-dark"><i class="fa-solid fa-microphone"></i> 702 DZAS</a>
              </div>
         </div>
     </section>
@@ -55,10 +56,46 @@
     </section>
 
     <footer>
-        </footer>
+        <div class="footer-content">
+            <div class="footer-col">
+                <h4>ISACC</h4>
+                <p>Institute for Studies in Asian Church and Culture</p>
+            </div>
+            <div class="footer-col">
+                <h4>Contact Us</h4>
+                <p>
+                    Landline:<br>
+                    +63 (02) 8255-7614<br>
+                    +63 (02) 8470-1044
+                </p>
+                <p>
+                    Email: <a href="mailto:isaccglobal@gmail.com">isaccglobal@gmail.com</a>
+                </p>
+            </div>
+            <div class="footer-col">
+                <h4>Our Location</h4>
+                <p>
+                    4 Malinis, Diliman<br>
+                    Quezon City, Metro Manila<br>
+                    Philippines
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <div id="fullscreen-menu">
-        </div>
+        <nav class="menu-nav">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/trainings.html">Trainings</a></li>
+                <li><a href="/research.html">Research</a></li>
+                <li><a href="/podcast.html">Podcast</a></li>
+                <li><a href="/publications.html">Publications</a></li>
+                <li><a href="/advocacy.html">Advocacy</a></li>
+                <li><a href="/about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <script src="script.js"></script>
 </body>
