--- a/about.html
+++ b/about.html
@@ -114,10 +114,46 @@
     </section>
 
     <footer>
-        </footer>
+        <div class="footer-content">
+            <div class="footer-col">
+                <h4>ISACC</h4>
+                <p>Institute for Studies in Asian Church and Culture</p>
+            </div>
+            <div class="footer-col">
+                <h4>Contact Us</h4>
+                <p>
+                    Landline:<br>
+                    +63 (02) 8255-7614<br>
+                    +63 (02) 8470-1044
+                </p>
+                <p>
+                    Email: <a href="mailto:isaccglobal@gmail.com">isaccglobal@gmail.com</a>
+                </p>
+            </div>
+            <div class="footer-col">
+                <h4>Our Location</h4>
+                <p>
+                    4 Malinis, Diliman<br>
+                    Quezon City, Metro Manila<br>
+                    Philippines
+                </p>
+            </div>
+        </div>
+    </footer>
 
     <div id="fullscreen-menu">
-        </div>
+        <nav class="menu-nav">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/trainings.html">Trainings</a></li>
+                <li><a href="/research.html">Research</a></li>
+                <li><a href="/podcast.html">Podcast</a></li>
+                <li><a href="/publications.html">Publications</a></li>
+                <li><a href="/advocacy.html">Advocacy</a></li>
+                <li><a href="/about.html">About</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <script src="script.js"></script>
 </body>
