--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="intro-section text-center-underline">
         <div class="content-wrapper">
             <h2>In the Philippines, the heart to do good is everywhere.</h2>
-            <p style="text-align: center;">From neighborhood pantries to mission-driven startups, kindness runs deep in our culture. <br><br> But good intentions alone aren’t enough. What we often lack is structure. Clear ways to turn compassion into lasting impact.<br><br> That's why ISACC is building tools and ideas for communities and businesses to make generosity not just a moment, but a movement.</p>
+            <p>From neighborhood pantries to mission-driven startups, kindness runs deep in our culture. <br><br> But good intentions alone aren’t enough. What we often lack is structure. Clear ways to turn compassion into lasting impact.<br><br> That's why ISACC is building tools and ideas for communities and businesses to make generosity not just a moment, but a movement.</p>
         </div>
     </section>
 
