--- a/trainings.html
+++ b/trainings.html
@@ -38,12 +38,13 @@
     <section class="intro-section text-center-underline">
         <div class="content-wrapper">
             <h2>Building Leaders, Transforming Nations.</h2>
-            <p style="text-align: center;">For over four decades, ISACC has provided foundational training to empower leaders who bring lasting change to their communities. Our courses are designed to integrate biblical truth with practical, real-world application, equipping the church to be a true agent of change.</p>
+            <p>For over four decades, ISACC has provided foundational training to empower leaders who bring lasting change to their communities. Our courses are designed to integrate biblical truth with practical, real-world application, equipping the church to be a true agent of change.</p>
         </div>
     </section>
 
     <section class="courses-section">
         <div class="content-wrapper">
+            <h3 class="section-title">Our Core Training Programs</h3>
             <div class="course-grid">
                 <div class="course-card">
                     <i class="fa-solid fa-church"></i>
