--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@
     <section class="intro-section text-center-underline">
         <div class="content-wrapper">
             <h2>Informing Transformation Through Principled Research.</h2>
-            <p style="text-align:center;">Knowledge is the foundation of effective action. ISACC's research provides faith-based organizations and leaders with the critical insights needed to address complex socio-cultural issues from a biblical perspective.</p>
+            <p>Knowledge is the foundation of effective action. ISACC's research provides faith-based organizations and leaders with the critical insights needed to address complex socio-cultural issues from a biblical perspective.</p>
         </div>
     </section>
 
@@ -27,10 +27,12 @@
             <h3>Featured Publications from Research</h3>
             <div class="featured-research-grid">
                 <article class="featured-item">
+                    <img src="research2.jpg" alt="A Clash of Cultures book cover">
                     <h4>A Clash of Cultures</h4>
                     <p>A groundbreaking, PEW-funded research into the intercultural miscues between American Protestant Missions and Filipino religious consciousness at the turn of the century.</p>
                 </article>
                 <article class="featured-item">
+                    <img src="research3.jpg" alt="Rise Up and Walk book cover">
                     <h4>Rise Up and Walk</h4>
                     <p>An ICCO-funded critique of development narratives, offering practical insights into wholistic development based on research in 7 poor communities.</p>
                 </article>
