--- a/podcast.html
+++ b/podcast.html
@@ -29,11 +29,11 @@
             <div class="podcast-video-wrapper">
                 <h3>Latest Episode:</h3>
                 <div class="video-container">
-                    <iframe 
-                        src="https://www.youtube.com/embed/videoseries?list=UUnUkw858jCHd_50k7F-HffA" 
-                        title="Latest Isip-Isak YouTube video player" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    <iframe
+                        src="https://www.youtube.com/embed/videoseries?list=UU...YOUR_PLAYLIST_ID..."
+                        title="Latest Isip-Isak YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
                 </div>
