--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,7 @@
     <section class="intro-section text-center-underline">
         <div class="content-wrapper">
             <h2>Sharing Wisdom for a Changing World.</h2>
-            <p style="text-align:center;">ISACC publishes books, monographs, and articles that explore our core missional themes, providing resources for leaders and thinkers engaged in social transformation.</p>
+            <p>ISACC publishes books, monographs, and articles that explore our core missional themes, providing resources for leaders and thinkers engaged in social transformation.</p>
         </div>
     </section>
 
