--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <section class="intro-section text-center-underline">
         <div class="content-wrapper">
              <h2>Seeing the Gospel Transform Society.</h2>
-            <p style="text-align:center;">For over 40 years, The Institute for Studies in Asian Church and Culture (ISACC) has worked to see the good news of Christ take root in Asian cultures. We are a research and training organization dedicated to equipping leaders and empowering communities to build just and righteous societies.</p>
+            <p>For over 40 years, The Institute for Studies in Asian Church and Culture (ISACC) has worked to see the good news of Christ take root in Asian cultures. We are a research and training organization dedicated to equipping leaders and empowering communities to build just and righteous societies.</p>
         </div>
     </section>
 
@@ -39,6 +39,11 @@
                     <i class="fa-solid fa-scale-balanced"></i>
                     <h3>God is on the Side of the Poor</h3>
                     <p>Conscious of God's focus on the poor, we work to empower the voiceless and address the injustices that create poverty.</p>
+                </div>
+                <div class="pillar">
+                    <i class="fa-solid fa-hand-holding-heart"></i>
+                    <h3>Seeking Shalom for All</h3>
+                    <p>We are committed to the biblical vision of shalom—a world of peace and wholeness—working towards the restoration of all things in Christ.</p>
                 </div>
              </div>
         </div>
@@ -82,6 +87,57 @@
                 <div class="logo-item"><span>INFEMIT</span></div>
                 <div class="logo-item"><span>Regent College</span></div>
             </div>
+            <div class="linkages-categories">
+                <div class="linkages-category">
+                    <h4>Global Alliances & Networks</h4>
+                    <ul>
+                        <li>Micah Global</li>
+                        <li>International Fellowship of Mission Theologians (INFEMIT)</li>
+                        <li>World Association of Christian Communicators</li>
+                        <li>Latin American Theological Fraternity</li>
+                        <li>International Fellowship of Evangelical Students</li>
+                        <li>Missions East Asia National Support (MEANS)</li>
+                    </ul>
+                </div>
+                <div class="linkages-category">
+                    <h4>Philippine Coalitions</h4>
+                    <ul>
+                        <li>Freedom from Debt Coalition</li>
+                        <li>Faith-based Coalition Against Immoral Debt</li>
+                        <li>Philippine Alliance of Human Rights Advocates (PAHRA)</li>
+                        <li>People’s Choice Movement (PCM)</li>
+                        <li>Philippine Ecumenical Peace Platform (PEPP)</li>
+                    </ul>
+                </div>
+                <div class="linkages-category">
+                    <h4>Academic & Mission Partners</h4>
+                    <ul>
+                        <li>Langham Partnership</li>
+                        <li>Regent College, Canada</li>
+                        <li>Fuller Theological Seminary, US</li>
+                        <li>Life and Peace Institute, Sweden</li>
+                        <li>Center for the Study of Religion and Development, Netherlands</li>
+                        <li>Centre for the Study of World Christianity, Scotland</li>
+                        <li>London Institute for Contemporary Christianity</li>
+                        <li>All Nations Christian College, UK</li>
+                        <li>Nagel Institute for the Study of World Christianity</li>
+                        <li>Akrofi Christaller, Ghana</li>
+                    </ul>
+                </div>
+                <div class="linkages-category">
+                    <h4>Development & Funding Partners</h4>
+                    <ul>
+                        <li>TEAR Fund (UK, Australia, New Zealand)</li>
+                        <li>World Vision International</li>
+                        <li>Evangelisches Missionwerk (EED), Germany</li>
+                        <li>ICCO, Netherlands</li>
+                        <li>Anglican Church of Canada</li>
+                        <li>Covenant Church World Relief Committee</li>
+                        <li>PEW Foundation</li>
+                        <li>Philippine Government (Ministry of Education)</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </section>
     
@@ -110,6 +166,26 @@
                     <p>Treasurer</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="recognitions-section">
+        <div class="content-wrapper">
+            <h2>Recognitions & Awards</h2>
+            <ul class="recognitions-list">
+                <li class="recognition-item">
+                    <h4>Leadership of the Evangelical Presence during the People Power Revolution</h4>
+                    <p>Awarded by the Center for Transformation, Asian Theological Seminary (1986)</p>
+                </li>
+                <li class="recognition-item">
+                    <h4>Distinguished Evangelical Award in Church Studies and Culture</h4>
+                    <p>Awarded by the Philippine Council of Evangelical Churches (1995)</p>
+                </li>
+                 <li class="recognition-item">
+                    <h4>‘Faithful Teaching, Heavenly Wisdom’ Award</h4>
+                    <p>Presented by Breakthrough, Hongkong, on ISACC’s 30th Anniversary (2008)</p>
+                </li>
+            </ul>
         </div>
     </section>
 
