--- a/trainings.html
+++ b/trainings.html
@@ -38,7 +38,11 @@
     <section class="intro-section text-center-underline">
         <div class="content-wrapper">
             <h2>Building Leaders, Transforming Nations.</h2>
-            <p>For over four decades, ISACC has provided foundational training to empower leaders who bring lasting change to their communities. Our courses are designed to integrate biblical truth with practical, real-world application, equipping the church to be a true agent of change.</p>
+            <p>For over four decades, ISACC has provided foundational training to empower leaders who bring lasting change to their communities. Our courses are designed to integrate biblical truth with practical, real-world application, equipping the church to be a true agent of change. ISACC has likewise sent training teams to Cambodia, Myanmar, Vietnam and Laos under the auspices of Open Doors, an organization that serves church communities in restricted contexts.</p>
+            <div class="training-images-grid">
+                <img src="trainings2.jpg" alt="An ISACC training workshop in session">
+                <img src="trainings3.jpg" alt="Participants in an ISACC training seminar">
+            </div>
         </div>
     </section>
 
