--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@
     <section class="intro-section text-center-underline">
         <div class="content-wrapper">
             <h2>Informing Transformation Through Principled Research.</h2>
-            <p>Knowledge is the foundation of effective action. ISACC's research provides faith-based organizations and leaders with the critical insights needed to address complex socio-cultural issues from a biblical perspective.</p>
+            <p>Knowledge is the foundation of effective action. ISACC is frequently tapped for its expertise in development and socio-cultural issues. Our research provides faith-based organizations and leaders with the critical insights needed to address complex challenges from a biblical perspective, evaluating both technical efficacy and missional impact.</p>
         </div>
     </section>
 
@@ -29,12 +29,12 @@
                 <article class="featured-item">
                     <img src="research2.jpg" alt="A Clash of Cultures book cover">
                     <h4>A Clash of Cultures</h4>
-                    <p>A groundbreaking, PEW-funded research into the intercultural miscues between American Protestant Missions and Filipino religious consciousness at the turn of the century.</p>
+                    <p>A groundbreaking, PEW-funded research into the intercultural miscues between American Protestant Missions and Filipino religious consciousness at the turn of the century. Published by De La Salle University and Anvil Press.</p>
                 </article>
                 <article class="featured-item">
                     <img src="research3.jpg" alt="Rise Up and Walk book cover">
                     <h4>Rise Up and Walk</h4>
-                    <p>An ICCO-funded critique of development narratives, offering practical insights into wholistic development based on research in 7 poor communities.</p>
+                    <p>An ICCO-funded critique of development narratives, offering practical insights into wholistic development based on participatory research in seven poor communities. Published by Regnum and the Oxford Center for Mission Studies.</p>
                 </article>
             </div>
         </div>
@@ -42,39 +42,68 @@
 
     <section class="research-projects-section">
         <div class="content-wrapper">
-            <h3>Historical Research & Documentation</h3>
+            <h3>Notable Research & Documentation</h3>
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h4>Conversion to Protestant Christianity Under Early American Rule (1995-1999)</h4>
-                        <p>A massive four-year study of the interface between Filipino religious consciousness and conversion themes brought by American missionaries.</p>
+                        <p>A massive four-year study of the interface between Filipino religious consciousness and the conversion themes brought by American Protestant missionaries.</p>
                         <div class="key-learnings">
                             <h5>Core Insights:</h5>
                             <ul>
                                 <li>Examined cross-cultural problems arising from missions arriving with an imperial power.</li>
-                                <li>Analyzed the culture-fit between missionary messages and indigenous religious imagination.</li>
-                                <li>The first study of its kind funded by the PEW Foundation outside US territory.</li>
+                                <li>Analyzed the culture-fit between missionary messages and the indigenous religious imagination using oral histories, archival sources, and textual analysis.</li>
+                                <li>The first study of its kind funded by the PEW Foundation outside US territory and conducted entirely by local scholars.</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h4>Homeroom: An Evaluation (1982-1985)</h4>
-                        <p>A three-year nationwide research for the Ministry of Education on the effectiveness of homeroom activities for value education in elementary schools.</p>
-                         <div class="key-learnings">
-                            <h5>Core Insights:</h5>
+                        <h4>Project Evaluation & Consultancy for NGOs</h4>
+                        <p>ISACC provides project evaluation and consultancy services to assess the impact and efficacy of mission and development organizations. Notable studies include:</p>
+                        <div class="key-learnings">
+                            <h5>Project Highlights:</h5>
                             <ul>
-                                <li>Provided baseline data for the national Program for Decentralized Education (PRODED).</li>
-                                <li>Formed the basis for institutionalizing an integrated values education program.</li>
+                                <li><b>Culturally-Sensitive Exit Strategies:</b> A study for Tear Fund UK involving case studies in Vietnam, Cambodia, and Thailand to analyze the impact of project exits on local partners.</li>
+                                <li><b>Impact Assessment in Tacloban:</b> An evaluation of disaster interventions by three faith-based organizations, commissioned by Woord en Daad, Netherlands.</li>
+                                <li><b>Transforming Communities (CCT):</b> Research into how the Center for Community Transformation, a microfinance NGO, integrates faith and practice in its operations.</li>
+                                <li><b>Faith-Based Organizations & Poverty Reduction:</b> A baseline study focused on the community development contributions of evangelical organizations.</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                  <div class="timeline-item">
                     <div class="timeline-content">
-                        <h4>Project Evaluation Studies for International NGOs</h4>
-                        <p>ISACC provides project evaluation and consultancy services. Notable studies include a study on culturally-sensitive exit strategies for Tear Fund UK and an impact assessment of disaster interventions for Woord en Daad, Netherlands.</p>
+                        <h4>Homeroom: An Evaluation (1982-1985)</h4>
+                        <p>A three-year nationwide research for the Ministry of Education (funded through the World Bank) on the effectiveness of homeroom activities for value education in elementary schools.</p>
+                         <div class="key-learnings">
+                            <h5>Core Insights:</h5>
+                            <ul>
+                                <li>Provided baseline data for the national Program for Decentralized Education (PRODED).</li>
+                                <li>Formed the basis for institutionalizing an integrated values education program in the national curriculum.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h4>Documenting Development Learnings</h4>
+                        <p>ISACC is committed to sharing insights from its fieldwork through publications and resource manuals. Key projects include:</p>
+                         <div class="key-learnings">
+                            <h5>Highlighted Projects:</h5>
+                            <ul>
+                                <li><b>Hasik-Unlad (1998):</b> Documented insights from training church-based communities, integrating biblical perspectives with the community organizing framework.</li>
+                                <li><b>Sambahaginan (1991):</b> Documented the community organizing process and development learnings from Sitio Ibayo, Nasugbu, Batangas.</li>
+                                <li><b>Kingdom Agenda (1980):</b> A World Vision-funded development resource manual to assist Christian organizations in moving towards more contextual and wholistic work.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h4>The Trade Union Movement in the Philippines (1979)</h4>
+                        <p>A history of the labor movement commissioned by the National Federation of Labor Unions (NAFLU). The research was primarily based on extensive oral history interviews with the late labor leader Felixberto Olalia, founder of the Kilusang Mayo Uno.</p>
                     </div>
                 </div>
             </div>
