--- a/podcast.html
+++ b/podcast.html
@@ -16,14 +16,24 @@
     </header>
 
     <section class="intro-section">
-        <div class="content-wrapper podcast-intro">
-            <div class="podcast-description">
-                <h2>Isip-Isak</h2>
-                <p><strong>(English: think like ISACC)</strong></p>
-                <p>Dr. Melba Padilla Maggay (a writer, social anthropologist, and social activist) interviews Filipino voices—social figures, thought-leaders, and politicians—to discuss how to make sense of faith and how we express it in our daily lives.</p>
-                <div class="social-links">
-                    <a href="https://web.facebook.com/profile.php?id=61550959538507" target="_blank" class="social-button facebook">View on Facebook</a>
-                    <a href="#" target="_blank" class="social-button spotify">Listen on Spotify</a>
+        <div class="content-wrapper podcast-intro-updated">
+            <div class="podcast-main-content">
+                <div class="podcast-description">
+                    <h2>Isip-Isak</h2>
+                    <p class="podcast-tagline">Making Sense of Faith in Our Daily Lives.</p>
+                    <p>Dr. Melba Padilla Maggay interviews Filipino voices—social figures, thought-leaders, and politicians—to discuss the cultural and social expression of our faith.</p>
+                    <div class="social-links">
+                        <a href="https://web.facebook.com/profile.php?id=61550959538507" target="_blank" class="social-button facebook"><i class="fab fa-facebook"></i> View on Facebook</a>
+                        <a href="#" target="_blank" class="social-button spotify"><i class="fab fa-spotify"></i> Listen on Spotify</a>
+                    </div>
+                </div>
+
+                <div class="host-spotlight">
+                    <img src="podcast2.jpg" alt="Dr. Melba Padilla Maggay">
+                    <div class="host-info">
+                        <h4>Hosted by Dr. Melba Padilla Maggay</h4>
+                        <p>A distinguished writer, social anthropologist, and passionate social activist.</p>
+                    </div>
                 </div>
             </div>
             <div class="podcast-video-wrapper">
@@ -36,6 +46,30 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen>
                     </iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="guest-showcase-section">
+        <div class="content-wrapper">
+            <h3>Featuring Voices From Across Society</h3>
+            <p>We bring together diverse perspectives from leaders and thinkers to enrich our public conversations.</p>
+            <div class="guest-grid">
+                <div class="guest-card">
+                    <img src="podcast3.jpg" alt="Guest 1">
+                    <h4>Guest Name 1</h4>
+                    <span>Field/Expertise</span>
+                </div>
+                <div class="guest-card">
+                    <img src="podcast4.jpg" alt="Guest 2">
+                    <h4>Guest Name 2</h4>
+                    <span>Field/Expertise</span>
+                </div>
+                <div class="guest-card">
+                    <img src="podcast5.jpg" alt="Guest 3">
+                    <h4>Guest Name 3</h4>
+                    <span>Field/Expertise</span>
                 </div>
             </div>
         </div>
