--- a/publications.html
+++ b/publications.html
@@ -80,6 +80,20 @@
         </div>
     </section>
 
+    <section class="author-section">
+        <div class="content-wrapper">
+            <div class="author-image">
+                <img src="podcast2.jpg" alt="Dr. Melba Padilla Maggay">
+            </div>
+            <div class="author-bio">
+                <h3>Meet the Author</h3>
+                <h2>Dr. Melba Padilla Maggay</h2>
+                <p>Dr. Maggay’s writings are essential for anyone interested in the intersection of faith, culture, and social transformation. As a social anthropologist with a Ph.D. in Philippine Studies, she brings a unique and deeply informed perspective to her work. Her experience as an activist, particularly her role in the 1986 People Power Revolution, gives her a credible voice on issues of justice, history, and national identity. Readers should be interested because she doesn't just offer academic theory; she provides wisdom forged from real-world engagement, making complex social issues accessible and relevant to people of faith.</p>
+                <a href="https://en.wikipedia.org/wiki/Melba_Padilla_Maggay" target="_blank" class="learn-more-link">Learn More on Wikipedia <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+        </div>
+    </section>
+
      <section class="rappler-section">
         <div class="content-wrapper">
             <div class="rappler-header">
@@ -90,16 +104,19 @@
                 <a href="https://www.rappler.com/voices/thought-leaders/reflection-idols-of-our-time/" target="_blank" class="rappler-card">
                     <img src="rappler1.jpg" alt="[Reflection] The idols of our time">
                     <h3>[Reflection] The idols of our time</h3>
+                    <p class="rappler-excerpt">A reflection on how flawed public figures can become symbols of hope that light up the darkness in our world.</p>
                     <span>Read on Rappler →</span>
                 </a>
                 <a href="https://www.rappler.com/voices/thought-leaders/opinion-on-duterte-arrest-and-sovereignty/" target="_blank" class="rappler-card">
                     <img src="rappler2.jpg" alt="[OPINION] On Duterte, arrest, and sovereignty">
                     <h3>[OPINION] On Duterte, arrest, and sovereignty</h3>
+                    <p class="rappler-excerpt">An argument that international cooperation for justice does not violate, but rather affirms, a nation's moral standing.</p>
                     <span>Read on Rappler →</span>
                 </a>
                 <a href="https://www.rappler.com/voices/thought-leaders/opinion-profaning-appropriations-nothing-left-sacred/" target="_blank" class="rappler-card">
                     <img src="rappler3.jpg" alt="[OPINION] On profaning appropriations">
                     <h3>[OPINION] On profaning appropriations</h3>
+                    <p class="rappler-excerpt">This piece contends that the national budget is a sacred trust, and its misuse is a profound betrayal of the public.</p>
                     <span>Read on Rappler →</span>
                 </a>
             </div>
